Pagination Added. Although Shaky. Have some issues like last element is not showing. Other problem is related to product editing. I have added pagination only for non-authorized users only. Will fix these soon after some Reasearch

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -88,3 +88,20 @@ p {
 .modal-header .close {
   outline: none !important;
 }
+
+.page-item {
+
+&.active {
+  .page-link {
+    background-color: $primary;
+    border-color: $primary;
+  }
+}
+  .page-link {
+    color: $primary;
+    &:focus {
+      box-shadow: 0 0 0 0.2rem rgba($primary, 0.55);
+    }
+  }
+
+}
